--- a/website/content/en/releases/14.2R/errata.adoc
+++ b/website/content/en/releases/14.2R/errata.adoc
@@ -63,7 +63,14 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 [[open-issues]]
 == Open Issues
 
-No open issues.
+* Some man:isp[4] devices will cause a kernel panic if their firmware is not loaded before the system boots.
+On affected systems, the man:ispfw[4] kernel module should be loaded from the boot loader.
+
+* Disabling devices via boot loader hints, e.g. `hint.foo.0.disabled="1"` can result in kernel panics with suspend/resume.
+
+* `drm-kmod` packages compiled on FreeBSD 14.1 result in the text console being inoperative when the kernel module is loaded.
+Recompiling the package from the ports tree will restore the lost functionality.
+This issue will also resolve itself after the FreeBSD 14.1 EoL, when packages for {releaseBranch} will start being built on FreeBSD {release}.
 
 [[late-news]]
 == Late-Breaking News
