website/content: Update 14.2 Release Notes
- Unleash the release notes in the primary release announcement

Approved by:	re (blanket)
Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -202,17 +202,22 @@ This section covers changes and additions to userland applications, contributed 
 
 [[userland-programs]]
 === Userland Application Changes
+An option has been added to change the directory in man:env[1] which closely resemebles the feature in the GNU version of env although it does not support long options.
 
 [[userland-contrib]]
 === Contributed Software
 
 `bc` has been upgraded to 7.0.2.
 
+`ice` has been upgraded to 1.43.2-k.
+
+`ice_ddp` has been upgraded to 1.3.41.0.
+
 `libarchive` has been upgraded to 3.7.7.
 
 `libcxxrt` has been upgraded to vendor snapshot 698997bfde1f.
 
-`libpcap` has been upgraded to vendor snapshot 1.10.5.
+`libpcap` has been upgraded to 1.10.5.
 
 `tcpdump` has been upgraded to 4.99.5.
 
@@ -222,6 +227,8 @@ This section covers changes and additions to userland applications, contributed 
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
+
+man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been deprecated, but now running this application will show a warning to migrate to man:gpart[8].
 
 [[userland-libraries]]
 === Runtime Libraries and API
@@ -242,8 +249,14 @@ This section covers changes and additions to devices and device drivers since {r
 [[drivers-device]]
 === Device Drivers
 
+Meteor Lake support has been added to the man:ig4[4] driver.
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
+
+man:agp[4] has been planned for removal in FreeBSD 15.0, and the man page now states that it is deprecated.
+
+man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
 
 [[storage]]
 == Storage
@@ -274,6 +287,10 @@ Specifically, support for the SCTP checksum offload feature has been added to th
 
 [[network-general]]
 === General Network
+
+AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
+This feature has also been added for network interfaces which supports 2.5G speed.
+These features has also been added to the man:lem[4] and man:em[4] drivers.
 
 [[hardware]]
 == Hardware Support
