--- a/website/content/en/internal/about.adoc
+++ b/website/content/en/internal/about.adoc
@@ -43,7 +43,8 @@ In addition, there are a few locally crafted CGI scripts.
 [.right]
 image:../../gifs/lynx.gif[Lynx Friendly logo]
 
-The original web pages were put together by John Fieber https://people.FreeBSD.org/~jfieber/[<jfieber@FreeBSD.org>] with input from the FreeBSD community and *you*. http://wolfram.schneider.org[<wosch@FreeBSD.org>] was our first webmaster but this responsibility is now shared by a larger team of web and documentation contributors. The FreeBSD pages are valid XHTML 1.0 Transitional and should degrade gracefully on any browser.
+The original web pages were put together by John Fieber <jfieber@FreeBSD.org> with input from the FreeBSD community and *you*. 
+https://wolfram.schneider.org[Wolfram Schneider] was our first webmaster but this responsibility is now shared by a larger team of web and documentation contributors. The FreeBSD pages are valid XHTML 1.0 Transitional and should degrade gracefully on any browser.
 
 See also the link:../../docproj/[FreeBSD Documentation Project]
 
