After switching to AsciiDoc, the FreeBSD pages are no longer in XHTML 1.0 Transitional
Reported by:	Pau Amma <pauamma@gundo.com>

--- a/website/content/en/internal/about.adoc
+++ b/website/content/en/internal/about.adoc
@@ -44,7 +44,7 @@ In addition, there are a few locally crafted CGI scripts.
 image:../../gifs/lynx.gif[Lynx Friendly logo]
 
 The original web pages were put together by John Fieber <jfieber@FreeBSD.org> with input from the FreeBSD community and *you*. 
-https://wolfram.schneider.org[Wolfram Schneider] was our first webmaster but this responsibility is now shared by a larger team of web and documentation contributors. The FreeBSD pages are valid XHTML 1.0 Transitional and should degrade gracefully on any browser.
+https://wolfram.schneider.org[Wolfram Schneider] was our first webmaster but this responsibility is now shared by a larger team of web and documentation contributors.
 
 See also the link:../../docproj/[FreeBSD Documentation Project]
 
