HW Relnotes: Improve Supported Architectures
For the template, 14.2, and 13.5, increase consistency
by making the section names more similar. Remove the empty
ARM section.

Reviewed by:	mhorne, emaste
Differential Revision:	https://reviews.freebsd.org/D47704

--- a/website/content/en/releases/13.5R/hardware.adoc
+++ b/website/content/en/releases/13.5R/hardware.adoc
@@ -34,18 +34,13 @@ AMD64 supports all modern x86 processors.
 This release incorporates optimizations and enhancements to leverage the full capabilities of FreeBSD/amd64-based systems, delivering improved performance across a wide range of workloads.
 
 [[proc-i386]]
-=== i386 Architecture Support
+=== 32-bit x86 (i386) Architecture Support
 
 While FreeBSD continues to evolve and optimize for modern architectures, we are committed to maintaining support for the venerable i386 (x86) architecture in this release.
 Although i386 hardware is becoming less common, FreeBSD remains a reliable and versatile choice for those who still rely on it, whether for legacy systems or specific use cases.
 
-[[proc-arm]]
-=== ARM Architecture Support
-
-FreeBSD features robust ARM architecture support, enhancing compatibility and performance across a diverse array of ARM-based devices.
-
 [[proc-arm-64]]
-=== 64-bit ARM (aarch64)
+=== 64-bit ARM (aarch64) Architecture Support
 
 FreeBSD supports 64-bit ARM (known as arm64 or AArch64) as a Tier-1 architecture.
 
@@ -109,7 +104,7 @@ RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.
 Zedboard Zynq 7000 SoC
 
 [[proc-arm-32]]
-=== 32-bit ARM (armv6, armv7)
+=== 32-bit ARM (armv6, armv7) Architecture Support
 
 FreeBSD currently supports the following devices:
 
