--- a/website/archetypes/release/installation.adoc
+++ b/website/archetypes/release/installation.adoc
@@ -82,7 +82,7 @@ After updating installed third-party applications (and again, only if man:freebs
 # freebsd-update install
 ----
 
-Finally, reboot into {releaseCurrent}
+Finally, reboot into a fully {releaseCurrent} system:
 
 [.screen]
 ----
