--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -266,6 +266,12 @@ This section covers changes and additions to file systems and other storage subs
 [[storage-general]]
 === General Storage
 
+[[storage-zfs]]
+=== ZFS
+
+OpenZFS has been upgraded to version 2.2.6.
+gitref:755e773877e9[repository=src]
+
 [[boot]]
 == Boot Loader Changes
 
