--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -203,28 +203,37 @@ This section covers changes and additions to userland applications, contributed 
 [[userland-programs]]
 === Userland Application Changes
 An option has been added to change the directory in man:env[1] which closely resemebles the feature in the GNU version of env although it does not support long options.
+gitref:08e8554c4a39[repository=src]
 
 [[userland-contrib]]
 === Contributed Software
 
 `bc` has been upgraded to 7.0.2.
+gitref:90ea553a0d30[repository=src]
 
 `libarchive` has been upgraded to 3.7.7.
+gitref:2ae238160f20[repository=src]
 
-`libcxxrt` has been upgraded to vendor snapshot 698997bfde1f.
+`libcxxrt` has been upgraded to vendor snapshot 6f2fdfebcd62.
+gitref:d0dcee46d971[repository=src]
 
 `libpcap` has been upgraded to 1.10.5.
+gitref:26f21a6494b4[repository=src]
 
 `tcpdump` has been upgraded to 4.99.5.
+gitref:ec3da16d8bc1[repository=src]
 
 `openssl` has been upgraded to 3.0.15.
+gitref:cc43f991ab3e[repository=src]
 
 `unbound` has been upgraded to 1.22.0.
+gitref:0a096a7b3ae8[repository=src]
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
 man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been deprecated, but now running this application will show a warning to migrate to man:gpart[8].
+gitref:3958be5c29da[repository=src]
 
 [[userland-libraries]]
 === Runtime Libraries and API
@@ -243,20 +252,25 @@ This section covers changes to kernel configurations, system tuning, and system 
 This section covers changes and additions to devices and device drivers since {releasePrev}.
 
 `ice` has been upgraded to 1.43.2-k.
+gitref:38a1655adcb3[repository=src]
 
 `ice_ddp` has been upgraded to 1.3.41.0.
+gitref:a9d78bb714e3[repository=src]
 
 [[drivers-device]]
 === Device Drivers
 
 Meteor Lake support has been added to the man:ig4[4] driver.
+gitref:56f0fc0011c2[repository=src]
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
 man:agp[4] has been planned for removal in FreeBSD 15.0, and the man page now states that it is deprecated.
+gitref:92af7c97e197[repository=src]
 
 man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
+gitref:2bc5b1d60512[repository=src]
 
 [[storage]]
 == Storage
