--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -344,19 +344,8 @@ This section covers changes to the FreeBSD Ports Collection, package infrastruct
 [[ports-packages]]
 === Packaging Changes
 
-The DVD package set has been modernized.
-
-package:archivers/unzip[] has been removed as it is in base now.
-
-package:emulators/linux_base-c7[] has been removed as it is unlikely to be useful without other Linux packages being installed.
-
-package:ports-mgmt/portmaster[] has been removed as it has been discouraged in favour of using pkg and binary packages.
-
-package:x11-drivers/xf86-video-vmware[] has been removed as it is no longer useful with the current version of xorg-server.
-
-package:devel/git[] has been replaced with package:devel/git@lite[] as this is sufficient for most purposes.
-
-package:sysutils/seatd[] and package:x11-wm/sway[] have been added for Wayland support.
+The package:net/wifi-firmware-kmod@release[] package has been added to the DVD package set in order to provide necessary firmware for wifi drivers.
+gitref:8c6df7ead19c[repository=src]
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
