--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -238,6 +238,21 @@ gitref:3958be5c29da[repository=src]
 [[userland-libraries]]
 === Runtime Libraries and API
 
+[[cloud]]
+== Cloud Support
+
+This section covers changes in support for cloud environments.
+
+The `nuageinit` startup script now supports OpenStack network config.
+gitref:ea310d18b222[repository=src]
+
+The FreeBSD project is now publishing OCI-compatible container images.
+gitref:8a688fcc242e[repository=src]
+
+The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 instances.
+Older instances upgraded to FreeBSD {releaseCurrent} will need to have `debug.acpi.quirks="8"` set in `/boot/loader.conf`.
+gitref:28b881840df7[repository=src]
+
 [[kernel]]
 == Kernel
 
@@ -251,17 +266,23 @@ This section covers changes to kernel configurations, system tuning, and system 
 
 This section covers changes and additions to devices and device drivers since {releasePrev}.
 
+[[drivers-device]]
+=== Device Drivers
+
+`ena` has been upgraded to 2.8.0.
+gitref:6bf02434bd9a[repository=src]
+
 `ice` has been upgraded to 1.43.2-k.
 gitref:38a1655adcb3[repository=src]
 
 `ice_ddp` has been upgraded to 1.3.41.0.
 gitref:a9d78bb714e3[repository=src]
 
-[[drivers-device]]
-=== Device Drivers
-
 Meteor Lake support has been added to the man:ig4[4] driver.
 gitref:56f0fc0011c2[repository=src]
+
+Support for ACPI GPIO _AEI objects has been added.
+gitref:1db6ffb2a482[repository=src]
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -293,6 +314,10 @@ This section covers the boot loader, boot menu, and other boot-related changes.
 
 [[boot-loader]]
 === Boot Loader Changes
+
+The BIOS boot loader now supports gzip and bzip2, but does not support graphics mode.
+(The EFI boot loader is unchanged with support for all of those.)
+gitref:4d3b05a8530e[repository=src]
 
 [[network]]
 == Networking
@@ -340,6 +365,12 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 == Ports Collection and Package Infrastructure
 
 This section covers changes to the FreeBSD Ports Collection, package infrastructure, and package maintenance and installation tools.
+
+[[Installer]]
+=== Installer
+
+The FreeBSD installer, man:bsdinstall[8], now supports downloading and installing firmware packages after the FreeBSD base system installation is complete.
+gitref:03c07bdc8b31[repository=src]
 
 [[ports-packages]]
 === Packaging Changes
