--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -232,7 +232,7 @@ gitref:0a096a7b3ae8[repository=src]
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
-man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been deprecated, but now running this application will show a warning to migrate to man:gpart[8].
+man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been removed, running this application will show a warning to migrate to man:gpart[8].
 gitref:3958be5c29da[repository=src]
 
 [[userland-libraries]]
