--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -253,6 +253,9 @@ The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 insta
 Older instances upgraded to FreeBSD {releaseCurrent} will need to have `debug.acpi.quirks="8"` set in `/boot/loader.conf`.
 gitref:28b881840df7[repository=src]
 
+The FreeBSD projects now publishes "small" EC2 images; these are the "base" images minus debug symbols, tests, 32-bit libraries, the LLDB debugger, the Amazon SSM Agent, and the AWS CLI.
+gitref:953142d6baf3[repository=src]
+
 [[kernel]]
 == Kernel
 
@@ -352,6 +355,9 @@ Nominal support for POWER10 and POWER11 has been added.
 [[networking]]
 [[hardware-virtualization]]
 === Virtualization Support
+
+The NVMM hypervisor is now detected.
+gitref:34f40baca641[repository=src]
 
 [[documentation]]
 == Documentation
