--- a/website/content/en/releases/14.2R/hardware.adoc
+++ b/website/content/en/releases/14.2R/hardware.adoc
@@ -2500,6 +2500,7 @@ devices, is also supported by this driver:
 
 
 
+
 The
 **udav**
 driver supports the following adapters:
@@ -2745,13 +2746,38 @@ The newer firmware is too big to fit into these old chips.
 
 
 
+The
+**ipw**
+driver provides support for the
+Intel PRO/Wireless 2100a/b MiniPCI network adapter.
+
+
+
+The
+**iwi**
+driver supports the following wireless network devices:
+
+*	Intel PRO/Wireless 2200BG MiniPCI Network Connection
+*	Intel PRO/Wireless 2225BG PCI Network Connection
+*	Intel PRO/Wireless 2915ABG MiniPCI Network Connection
+
 
 
 The
 **iwlwifi**
 driver supports PCIe devices from the
-*mvm*
-sub-driver with the following chipsets:
+**mvm**
+sub-driver with the following chipset generations:
+
+*	7000
+*	8000
+*	9000
+*	22000
+*	AX210
+*	BZ
+*	SC
+
+These chipset generations match the following common device names:
 
 *	Intel(R) Dual Band Wireless AC 7260
 *	Intel(R) Dual Band Wireless N 7260
@@ -2814,6 +2840,23 @@ sub-driver with the following chipsets:
 
 
 
+The
+**iwm**
+driver supports the following PCIe Wi-Fi devices:
+
+*	Intel Dual Band Wireless AC 3160
+*	Intel Dual Band Wireless AC 3165
+*	Intel Dual Band Wireless AC 3168
+*	Intel Dual Band Wireless AC 7260
+*	Intel Dual Band Wireless AC 7265
+*	Intel Dual Band Wireless AC 8260
+*	Intel Dual Band Wireless AC 8265
+*	Intel Dual Band Wireless AC 9260
+*	Intel Dual Band Wireless AC 9270
+*	Intel Dual Band Wireless AC 946X
+*	Intel Dual Band Wireless AC 9560
+
+
 
 The
 **iwn**
@@ -2862,44 +2905,27 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 The
 **otus**
-driver provices support for Atheros AR9170 USB IEEE 802.11b/g/n
+driver provides support for Atheros AR9170 USB IEEE 802.11b/g/n
 wireless network adapters, including:
 
-3Com 3CRUSBN275
-
-Arcadyan WN7512
-
-CACE AirPcap Nx
-
-D-Link DWA-130 rev D1
-
-D-Link DWA-160 rev A1
-
-D-Link DWA-160 rev A2
-
-IO-Data WN-GDN/US2
-
-NEC Aterm WL300NU-G
-
-Netgear WNDA3100
-
-Netgear WN111 v2
-
-Planex GW-US300
-
-SMC Networks SMCWUSB-N2
-
-TP-Link TL-WN821N v1, v2
-
-Ubiquiti SR71 USB
-
-Unex DNUA-81
-
-Z-Com UB81
-
-Z-Com UB82
-
-ZyXEL NWD-271N
+*	3Com 3CRUSBN275
+*	Arcadyan WN7512
+*	CACE AirPcap Nx
+*	D-Link DWA-130 rev D1
+*	D-Link DWA-160 rev A1
+*	D-Link DWA-160 rev A2
+*	IO-Data WN-GDN/US2
+*	NEC Aterm WL300NU-G
+*	Netgear WNDA3100
+*	Netgear WN111 v2
+*	Planex GW-US300
+*	SMC Networks SMCWUSB-N2
+*	TP-Link TL-WN821N v1, v2
+*	Ubiquiti SR71 USB
+*	Unex DNUA-81
+*	Z-Com UB81
+*	Z-Com UB82
+*	ZyXEL NWD-271N
 
 
 
@@ -2908,131 +2934,117 @@ The
 driver supports PCI/PCIe/CardBus wireless adapters based on Ralink Technology
 chipsets, including:
 
-	*Card*                           *MAC/BBP*  *Bus*  
-	A-Link WL54H                     RT2560     PCI  
-	A-Link WL54PC                    RT2560     CardBus  
-	AirLink101 AWLC5025              RT2661     CardBus  
-	AirLink101 AWLH5025              RT2661     PCI  
-	Amigo AWI-914W                   RT2560     CardBus  
-	Amigo AWI-922W                   RT2560     mini-PCI  
-	Amigo AWI-926W                   RT2560     PCI  
-	AMIT WL531C                      RT2560     CardBus  
-	AMIT WL531P                      RT2560     PCI  
-	AOpen AOI-831                    RT2560     PCI  
-	ASUS WL-107G                     RT2560     CardBus  
-	ASUS WL-130g                     RT2560     PCI  
-	Atlantis Land A02-PCI-W54        RT2560     PCI  
-	Atlantis Land A02-PCM-W54        RT2560     CardBus  
-	Belkin F5D7000 v3                RT2560     PCI  
-	Belkin F5D7010 v2                RT2560     CardBus  
-	Billionton MIWLGRL               RT2560     mini-PCI  
-	Canyon CN-WF511                  RT2560     PCI  
-	Canyon CN-WF513                  RT2560     CardBus  
-	CC&C WL-2102                     RT2560     CardBus  
-	CNet CWC-854                     RT2560     CardBus  
-	CNet CWP-854                     RT2560     PCI  
-	Compex WL54G                     RT2560     CardBus  
-	Compex WLP54G                    RT2560     PCI  
-	Conceptronic C54RC               RT2560     CardBus  
-	Conceptronic C54Ri               RT2560     PCI  
-	D-Link DWA-525 rev A2            RT5392     PCI  
-	Digitus DN-7001G-RA              RT2560     CardBus  
-	Digitus DN-7006G-RA              RT2560     PCI  
-	E-Tech WGPC02                    RT2560     CardBus  
-	E-Tech WGPI02                    RT2560     PCI  
-	Edimax EW-7108PCg                RT2560     CardBus  
-	Edimax EW-7128g                  RT2560     PCI  
-	Eminent EM3036                   RT2560     CardBus  
-	Eminent EM3037                   RT2560     PCI  
-	Encore ENLWI-G-RLAM              RT2560     PCI  
-	Encore ENPWI-G-RLAM              RT2560     CardBus  
-	Fiberline WL-400P                RT2560     PCI  
-	Fibreline WL-400X                RT2560     CardBus  
-	Gigabyte GN-WI01GS               RT2561S    mini-PCI  
-	Gigabyte GN-WIKG                 RT2560     mini-PCI  
-	Gigabyte GN-WMKG                 RT2560     CardBus  
-	Gigabyte GN-WP01GS               RT2561S    PCI  
-	Gigabyte GN-WPKG                 RT2560     PCI  
-	Hawking HWC54GR                  RT2560     CardBus  
-	Hawking HWP54GR                  RT2560     PCI  
-	iNexQ CR054g-009 (R03)           RT2560     PCI  
-	JAHT WN-4054P                    RT2560     CardBus  
-	JAHT WN-4054PCI                  RT2560     PCI  
-	LevelOne WNC-0301 v2             RT2560     PCI  
-	LevelOne WPC-0301 v2             RT2560     CardBus  
-	Linksys WMP54G v4                RT2560     PCI  
-	Micronet SP906GK                 RT2560     PCI  
-	Micronet SP908GK V3              RT2560     CardBus  
-	Minitar MN54GCB-R                RT2560     CardBus  
-	Minitar MN54GPC-R                RT2560     PCI  
-	MSI CB54G2                       RT2560     CardBus  
-	MSI MP54G2                       RT2560     mini-PCI  
-	MSI PC54G2                       RT2560     PCI  
-	OvisLink EVO-W54PCI              RT2560     PCI  
-	PheeNet HWL-PCIG/RA              RT2560     PCI  
-	Planex GW-NS300N                 RT2860     CardBus  
-	Pro-Nets CB80211G                RT2560     CardBus  
-	Pro-Nets PC80211G                RT2560     PCI  
-	Repotec RP-WB7108                RT2560     CardBus  
-	Repotec RP-WP0854                RT2560     PCI  
-	SATech SN-54C                    RT2560     CardBus  
-	SATech SN-54P                    RT2560     PCI  
-	Sitecom WL-112                   RT2560     CardBus  
-	Sitecom WL-115                   RT2560     PCI  
-	SMC SMCWCB-GM                    RT2661     CardBus  
-	SMC SMCWPCI-GM                   RT2661     PCI  
-	SparkLAN WL-685R                 RT2560     CardBus  
-	Surecom EP-9321-g                RT2560     PCI  
-	Surecom EP-9321-g1               RT2560     PCI  
-	Surecom EP-9428-g                RT2560     CardBus  
-	Sweex LC500050                   RT2560     CardBus  
-	Sweex LC700030                   RT2560     PCI  
-	TekComm NE-9321-g                RT2560     PCI  
-	TekComm NE-9428-g                RT2560     CardBus  
-	Unex CR054g-R02                  RT2560     PCI  
-	Unex MR054g-R02                  RT2560     CardBus  
-	Zinwell ZWX-G160                 RT2560     CardBus  
-	Zinwell ZWX-G360                 RT2560     mini-PCI  
-	Zinwell ZWX-G361                 RT2560     PCI  
-	Zonet ZEW1500                    RT2560     CardBus  
-	Zonet ZEW1600                    RT2560     PCI
+	*Card*                       *MAC/BBP*  *Bus*  
+	A-Link WL54H                 RT2560     PCI  
+	A-Link WL54PC                RT2560     CardBus  
+	AirLink101 AWLC5025          RT2661     CardBus  
+	AirLink101 AWLH5025          RT2661     PCI  
+	Amigo AWI-914W               RT2560     CardBus  
+	Amigo AWI-922W               RT2560     mini-PCI  
+	Amigo AWI-926W               RT2560     PCI  
+	AMIT WL531C                  RT2560     CardBus  
+	AMIT WL531P                  RT2560     PCI  
+	AOpen AOI-831                RT2560     PCI  
+	ASUS WL-107G                 RT2560     CardBus  
+	ASUS WL-130g                 RT2560     PCI  
+	Atlantis Land A02-PCI-W54    RT2560     PCI  
+	Atlantis Land A02-PCM-W54    RT2560     CardBus  
+	Belkin F5D7000 v3            RT2560     PCI  
+	Belkin F5D7010 v2            RT2560     CardBus  
+	Billionton MIWLGRL           RT2560     mini-PCI  
+	Canyon CN-WF511              RT2560     PCI  
+	Canyon CN-WF513              RT2560     CardBus  
+	CC&C WL-2102                 RT2560     CardBus  
+	CNet CWC-854                 RT2560     CardBus  
+	CNet CWP-854                 RT2560     PCI  
+	Compex WL54G                 RT2560     CardBus  
+	Compex WLP54G                RT2560     PCI  
+	Conceptronic C54RC           RT2560     CardBus  
+	Conceptronic C54Ri           RT2560     PCI  
+	D-Link DWA-525 rev A2        RT5392     PCI  
+	Digitus DN-7001G-RA          RT2560     CardBus  
+	Digitus DN-7006G-RA          RT2560     PCI  
+	E-Tech WGPC02                RT2560     CardBus  
+	E-Tech WGPI02                RT2560     PCI  
+	Edimax EW-7108PCg            RT2560     CardBus  
+	Edimax EW-7128g              RT2560     PCI  
+	Eminent EM3036               RT2560     CardBus  
+	Eminent EM3037               RT2560     PCI  
+	Encore ENLWI-G-RLAM          RT2560     PCI  
+	Encore ENPWI-G-RLAM          RT2560     CardBus  
+	Fiberline WL-400P            RT2560     PCI  
+	Fibreline WL-400X            RT2560     CardBus  
+	Gigabyte GN-WI01GS           RT2561S    mini-PCI  
+	Gigabyte GN-WIKG             RT2560     mini-PCI  
+	Gigabyte GN-WMKG             RT2560     CardBus  
+	Gigabyte GN-WP01GS           RT2561S    PCI  
+	Gigabyte GN-WPKG             RT2560     PCI  
+	Hawking HWC54GR              RT2560     CardBus  
+	Hawking HWP54GR              RT2560     PCI  
+	iNexQ CR054g-009 (R03)       RT2560     PCI  
+	JAHT WN-4054P                RT2560     CardBus  
+	JAHT WN-4054PCI              RT2560     PCI  
+	LevelOne WNC-0301 v2         RT2560     PCI  
+	LevelOne WPC-0301 v2         RT2560     CardBus  
+	Linksys WMP54G v4            RT2560     PCI  
+	Micronet SP906GK             RT2560     PCI  
+	Micronet SP908GK V3          RT2560     CardBus  
+	Minitar MN54GCB-R            RT2560     CardBus  
+	Minitar MN54GPC-R            RT2560     PCI  
+	MSI CB54G2                   RT2560     CardBus  
+	MSI MP54G2                   RT2560     mini-PCI  
+	MSI PC54G2                   RT2560     PCI  
+	OvisLink EVO-W54PCI          RT2560     PCI  
+	PheeNet HWL-PCIG/RA          RT2560     PCI  
+	Planex GW-NS300N             RT2860     CardBus  
+	Pro-Nets CB80211G            RT2560     CardBus  
+	Pro-Nets PC80211G            RT2560     PCI  
+	Repotec RP-WB7108            RT2560     CardBus  
+	Repotec RP-WP0854            RT2560     PCI  
+	SATech SN-54C                RT2560     CardBus  
+	SATech SN-54P                RT2560     PCI  
+	Sitecom WL-112               RT2560     CardBus  
+	Sitecom WL-115               RT2560     PCI  
+	SMC SMCWCB-GM                RT2661     CardBus  
+	SMC SMCWPCI-GM               RT2661     PCI  
+	SparkLAN WL-685R             RT2560     CardBus  
+	Surecom EP-9321-g            RT2560     PCI  
+	Surecom EP-9321-g1           RT2560     PCI  
+	Surecom EP-9428-g            RT2560     CardBus  
+	Sweex LC500050               RT2560     CardBus  
+	Sweex LC700030               RT2560     PCI  
+	TekComm NE-9321-g            RT2560     PCI  
+	TekComm NE-9428-g            RT2560     CardBus  
+	Unex CR054g-R02              RT2560     PCI  
+	Unex MR054g-R02              RT2560     CardBus  
+	Zinwell ZWX-G160             RT2560     CardBus  
+	Zinwell ZWX-G360             RT2560     mini-PCI  
+	Zinwell ZWX-G361             RT2560     PCI  
+	Zonet ZEW1500                RT2560     CardBus  
+	Zonet ZEW1600                RT2560     PCI
 
 
 
 The
 **rsu**
-driver provices support for Realtek RTL8188SU/RTL8192SU USB IEEE 802.11b/g/n
+driver provides support for Realtek RTL8188SU/RTL8192SU USB IEEE 802.11b/g/n
 wireless network adapters, including:
 
-ASUS USB-N10
-
-ASUS WL-167G V3
-
-Belkin F7D1101 v1
-
-D-Link DWA-131 A1
-
-EDUP EP-MS150N(W)
-
-Edimax EW-7622UMN
-
-Hercules HWGUn-54
-
-Hercules HWNUm-300
-
-Planex GW-USNano
-
-Sitecom WL-349 v1
-
-Sitecom WL-353
-
-Sweex LW154
-
-TRENDnet TEW-646UBH
-
-TRENDnet TEW-648UB
-
-TRENDnet TEW-649UB
+*	ASUS USB-N10
+*	ASUS WL-167G V3
+*	Belkin F7D1101 v1
+*	D-Link DWA-131 A1
+*	EDUP EP-MS150N(W)
+*	Edimax EW-7622UMN
+*	Hercules HWGUn-54
+*	Hercules HWNUm-300
+*	Planex GW-USNano
+*	Sitecom WL-349 v1
+*	Sitecom WL-353
+*	Sweex LW154
+*	TRENDnet TEW-646UBH
+*	TRENDnet TEW-648UB
+*	TRENDnet TEW-649UB
 
 
 
@@ -3040,13 +3052,10 @@ The
 **rtw88**
 driver supports PCIe devices with the following chipsets:
 
-Realtek 802.11n wireless 8723de (RTL8723DE)
-
-Realtek 802.11ac wireless 8821ce (RTL8821CE)
-
-Realtek 802.11ac wireless 8822be (RTL8822BE)
-
-Realtek 802.11ac wireless 8822ce (RTL8822CE)
+*	Realtek 802.11n  wireless 8723de (RTL8723DE)
+*	Realtek 802.11ac wireless 8821ce (RTL8821CE)
+*	Realtek 802.11ac wireless 8822be (RTL8822BE)
+*	Realtek 802.11ac wireless 8822ce (RTL8822CE)
 
 
 
@@ -3054,21 +3063,27 @@ The
 **rtw89**
 driver supports PCIe devices with the following chipsets:
 
-Realtek 802.11ax wireless 8851be (RTL8851BE)
+*	Realtek 8851BE Wi-Fi 6  (RTL8851BE)
+*	Realtek 8852AE Wi-Fi 6  (RTL8852AE)
+*	Realtek 8852BE Wi-Fi 6  (RTL8852BE)
+*	Realtek 8852CE Wi-Fi 6E (RTL8852CE)
+*	Realtek 8922AE Wi-Fi 7  (RTL8922AE)
 
-Realtek 802.11ax wireless 8852ae (RTL8852AE)
 
-Realtek 802.11ax wireless 8852be (RTL8852BE)
 
-Realtek 802.11ax wireless 8852ce (RTL8852CE)
+The
+**rtwn\_pci**
+driver supports the following PCIe Wi-Fi devices:
 
+*	Realtek 802.11n wireless 8188  (RTL8188EE)
+*	Realtek 802.11n wireless 8192  (RTL8192CE)
 
 
 
 The
 **rtwn\_usb**
-driver supports Realtek RTL8188CUS/RTL8188RU/RTL8188EU/RTL8192CU/RTL8192EU/RTL8812AU/RTL8821AU
-based USB wireless network adapters, including:
+driver supports USB wireless network adapters based on certain
+Realtek RTL 8188/8192/8812 and 8821 chipsets, including:
 
 	*Card*                                *Chip*        *Bus*  
 	Alfa AWUS036NHR v2                    RTL8188RU     USB 2.0  
@@ -3179,131 +3194,69 @@ The
 **run**
 driver supports the following wireless adapters:
 
-Airlink101 AWLL6090
-
-ASUS USB-N11
-
-ASUS USB-N13 ver. A1
-
-ASUS USB-N14
-
-ASUS USB-N66
-
-ASUS WL-160N
-
-Belkin F5D8051 ver 3000
-
-Belkin F5D8053
-
-Belkin F5D8055
-
-Belkin F6D4050 ver 1
-
-Belkin F9L1103
-
-Buffalo WLI-UC-AG300N
-
-Buffalo WLI-UC-G300HP
-
-Buffalo WLI-UC-G300N
-
-Buffalo WLI-UC-G301N
-
-Buffalo WLI-UC-GN
-
-Buffalo WLI-UC-GNM
-
-Buffalo WLI-UC-GNM2
-
-Corega CG-WLUSB2GNL
-
-Corega CG-WLUSB2GNR
-
-Corega CG-WLUSB300AGN
-
-Corega CG-WLUSB300GNM
-
-D-Link DWA-130 rev B1
-
-D-Link DWA-130 rev F1
-
-D-Link DWA-140 rev B1, B2, B3, D1
-
-D-Link DWA-160 rev B2
-
-D-Link DWA-162
-
-DrayTek Vigor N61
-
-Edimax EW-7711UAn
-
-Edimax EW-7711UTn
-
-Edimax EW-7717Un
-
-Edimax EW-7718Un
-
-Edimax EW-7733UnD
-
-Gigabyte GN-WB30N
-
-Gigabyte GN-WB31N
-
-Gigabyte GN-WB32L
-
-Hawking HWDN1
-
-Hawking HWUN1
-
-Hawking HWUN2
-
-Hercules HWNU-300
-
-Linksys WUSB54GC v3
-
-Linksys WUSB600N
-
-Logitec LAN-W150N/U2
-
-Mvix Nubbin MS-811N
-
-Panda Wireless PAU06
-
-Planex GW-USMicroN
-
-Planex GW-US300MiniS
-
-Sitecom WL-182
-
-Sitecom WL-188
-
-Sitecom WL-301
-
-Sitecom WL-302
-
-Sitecom WL-315
-
-SMC SMCWUSBS-N2
-
-Sweex LW303
-
-Sweex LW313
-
-TP-LINK TL-WDN3200
-
-TP-LINK TL-WN321G v4
-
-TP-LINK TL-WN727N v3
-
-Unex DNUR-81
-
-Unex DNUR-82
-
-ZyXEL NWD2705
-
-ZyXEL NWD210N
-
-ZyXEL NWD270N
+*	Airlink101 AWLL6090
+*	ASUS USB-N11
+*	ASUS USB-N13 ver. A1
+*	ASUS USB-N14
+*	ASUS USB-N66
+*	ASUS WL-160N
+*	Belkin F5D8051 ver 3000
+*	Belkin F5D8053
+*	Belkin F5D8055
+*	Belkin F6D4050 ver 1
+*	Belkin F9L1103
+*	Buffalo WLI-UC-AG300N
+*	Buffalo WLI-UC-G300HP
+*	Buffalo WLI-UC-G300N
+*	Buffalo WLI-UC-G301N
+*	Buffalo WLI-UC-GN
+*	Buffalo WLI-UC-GNM
+*	Buffalo WLI-UC-GNM2
+*	Corega CG-WLUSB2GNL
+*	Corega CG-WLUSB2GNR
+*	Corega CG-WLUSB300AGN
+*	Corega CG-WLUSB300GNM
+*	D-Link DWA-130 rev B1
+*	D-Link DWA-130 rev F1
+*	D-Link DWA-140 rev B1, B2, B3, D1
+*	D-Link DWA-160 rev B2
+*	D-Link DWA-162
+*	DrayTek Vigor N61
+*	Edimax EW-7711UAn
+*	Edimax EW-7711UTn
+*	Edimax EW-7717Un
+*	Edimax EW-7718Un
+*	Edimax EW-7733UnD
+*	Gigabyte GN-WB30N
+*	Gigabyte GN-WB31N
+*	Gigabyte GN-WB32L
+*	Hawking HWDN1
+*	Hawking HWUN1
+*	Hawking HWUN2
+*	Hercules HWNU-300
+*	Linksys WUSB54GC v3
+*	Linksys WUSB600N
+*	Logitec LAN-W150N/U2
+*	Mvix Nubbin MS-811N
+*	Panda Wireless PAU06
+*	Planex GW-USMicroN
+*	Planex GW-US300MiniS
+*	Sitecom WL-182
+*	Sitecom WL-188
+*	Sitecom WL-301
+*	Sitecom WL-302
+*	Sitecom WL-315
+*	SMC SMCWUSBS-N2
+*	Sweex LW303
+*	Sweex LW313
+*	TP-LINK TL-WDN3200
+*	TP-LINK TL-WN321G v4
+*	TP-LINK TL-WN727N v3
+*	Unex DNUR-81
+*	Unex DNUR-82
+*	ZyXEL NWD2705
+*	ZyXEL NWD210N
+*	ZyXEL NWD270N
 
 
 
@@ -3358,34 +3311,34 @@ The
 driver supports USB 2.0 wireless adapters based on the Ralink Technology
 RT2500USB chipset, including:
 
-	*Card*                           *Bus*  
-	AMIT WL532U                      USB  
-	ASUS WL-167g                     USB  
-	Belkin F5D7050 v2000             USB  
-	Buffalo WLI-U2-KG54-AI           USB  
-	CNet CWD-854                     USB  
-	Compex WLU54G 2A1100             USB  
-	Conceptronic C54RU               USB  
-	D-Link DWL-G122 b1               USB  
-	Dynalink WLG25USB                USB  
-	E-Tech WGUS02                    USB  
-	Gigabyte GN-WBKG                 USB  
-	Hercules HWGUSB2-54              USB  
-	KCORP LifeStyle KLS-685          USB  
-	Linksys WUSB54G v4               USB  
-	Linksys WUSB54GP v4              USB  
-	MSI MS-6861                      USB  
-	MSI MS-6865                      USB  
-	MSI MS-6869                      USB  
-	NovaTech NV-902                  USB  
-	OvisLink Evo-W54USB              USB  
-	SerComm UB801R                   USB  
-	SparkLAN WL-685R                 USB  
-	Surecom EP-9001-g                USB  
-	Sweex LC100060                   USB  
-	Tonze UW-6200C                   USB  
-	Zinwell ZWX-G261                 USB  
-	Zonet ZEW2500P                   USB
+	*Card*                       *Bus*  
+	AMIT WL532U                  USB  
+	ASUS WL-167g                 USB  
+	Belkin F5D7050 v2000         USB  
+	Buffalo WLI-U2-KG54-AI       USB  
+	CNet CWD-854                 USB  
+	Compex WLU54G 2A1100         USB  
+	Conceptronic C54RU           USB  
+	D-Link DWL-G122 b1           USB  
+	Dynalink WLG25USB            USB  
+	E-Tech WGUS02                USB  
+	Gigabyte GN-WBKG             USB  
+	Hercules HWGUSB2-54          USB  
+	KCORP LifeStyle KLS-685      USB  
+	Linksys WUSB54G v4           USB  
+	Linksys WUSB54GP v4          USB  
+	MSI MS-6861                  USB  
+	MSI MS-6865                  USB  
+	MSI MS-6869                  USB  
+	NovaTech NV-902              USB  
+	OvisLink Evo-W54USB          USB  
+	SerComm UB801R               USB  
+	SparkLAN WL-685R             USB  
+	Surecom EP-9001-g            USB  
+	Sweex LC100060               USB  
+	Tonze UW-6200C               USB  
+	Zinwell ZWX-G261             USB  
+	Zonet ZEW2500P               USB
 
 An up to date list can be found at
 *http://ralink.rapla.net/*.
@@ -3396,7 +3349,7 @@ The
 **urtw**
 driver supports Realtek RTL8187B/L based wireless network devices, including:
 
-	*Card*                        Radio      Bus  
+	*Card*                        *Radio*    *Bus*  
 	Belkin F5D7050E               RTL8225    USB  
 	Linksys WUSB54GCv2            RTL8225    USB  
 	Netgear WG111v2               RTL8225    USB  
@@ -3421,93 +3374,50 @@ The following devices are known to be supported by the
 **zyd**
 driver:
 
-3COM 3CRUSB10075
-
-Acer WLAN-G-US1
-
-Airlink+ AWLL3025
-
-Airlink 101 AWLL3026
-
-AOpen 802.11g WL54
-
-Asus A9T integrated wireless
-
-Asus WL-159g
-
-Belkin F5D7050 v.4000
-
-Billion BiPAC 3011G
-
-Buffalo WLI-U2-KG54L
-
-CC&C WL-2203B
-
-DrayTek Vigor 550
-
-Edimax EW-7317UG
-
-Edimax EW-7317LDG
-
-Fiberline Networks WL-43OU
-
-iNexQ UR055g
-
-Linksys WUSBF54G
-
-Longshine LCS-8131G3
-
-MSI US54SE
-
-MyTek MWU-201 USB adapter
-
-Philips SNU5600
-
-Planet WL-U356
-
-Planex GW-US54GZ
-
-Planex GW-US54GZL
-
-Planex GW-US54Mini
-
-Safecom SWMULZ-5400
-
-Sagem XG 760A
-
-Sagem XG 76NA
-
-Sandberg Wireless G54 USB
-
-Sitecom WL-113
-
-SMC SMCWUSB-G
-
-Sweex wireless USB 54 Mbps
-
-Tekram/Siemens USB adapter
-
-Telegent TG54USB
-
-Trendnet TEW-424UB rev A
-
-Trendnet TEW-429UB
-
-TwinMOS G240
-
-Unicorn WL-54G
-
-US Robotics 5423
-
-X-Micro XWL-11GUZX
-
-Yakumo QuickWLAN USB
-
-Zonet ZEW2501
-
-ZyXEL ZyAIR G-202
-
-ZyXEL ZyAIR G-220
+*	3COM 3CRUSB10075
+*	Acer WLAN-G-US1
+*	Airlink+ AWLL3025
+*	Airlink 101 AWLL3026
+*	AOpen 802.11g WL54
+*	Asus A9T integrated wireless
+*	Asus WL-159g
+*	Belkin F5D7050 v.4000
+*	Billion BiPAC 3011G
+*	Buffalo WLI-U2-KG54L
+*	CC&C WL-2203B
+*	DrayTek Vigor 550
+*	Edimax EW-7317UG
+*	Edimax EW-7317LDG
+*	Fiberline Networks WL-43OU
+*	iNexQ UR055g
+*	Linksys WUSBF54G
+*	Longshine LCS-8131G3
+*	MSI US54SE
+*	MyTek MWU-201 USB adapter
+*	Philips SNU5600
+*	Planet WL-U356
+*	Planex GW-US54GZ
+*	Planex GW-US54GZL
+*	Planex GW-US54Mini
+*	Safecom SWMULZ-5400
+*	Sagem XG 760A
+*	Sagem XG 76NA
+*	Sandberg Wireless G54 USB
+*	Sitecom WL-113
+*	SMC SMCWUSB-G
+*	Sweex wireless USB 54 Mbps
+*	Tekram/Siemens USB adapter
+*	Telegent TG54USB
+*	Trendnet TEW-424UB rev A
+*	Trendnet TEW-429UB
+*	TwinMOS G240
+*	Unicorn WL-54G
+*	US Robotics 5423
+*	X-Micro XWL-11GUZX
+*	Yakumo QuickWLAN USB
+*	Zonet ZEW2501
+*	ZyXEL ZyAIR G-202
+*	ZyXEL ZyAIR G-220
 
 
 [[misc-network]]
@@ -4589,7 +4499,6 @@ SafeNet 1141
 SafeNet 1741
 
 > A faster version of the 1141.
-
 
 
 [[misc]]
