--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -359,6 +359,9 @@ Nominal support for POWER10 and POWER11 has been added.
 The NVMM hypervisor is now detected.
 gitref:34f40baca641[repository=src]
 
+The VNC server in man:bhyve[8] will now show the correct colors when using the package:www/novnc[] client.
+gitref:f9e09dc5b1d5[repository=src]
+
 [[documentation]]
 == Documentation
 
