--- a/website/content/en/releases/14.2R/relnotes.adoc
+++ b/website/content/en/releases/14.2R/relnotes.adoc
@@ -331,14 +331,15 @@ This section describes changes that affect networking in FreeBSD.
 == Network Protocols
 
 Lots of improvements to the network stack, including performance improvements and bug fixes for the man:sctp[4] stack.
-Specifically, support for the SCTP checksum offload feature has been added to the loopback interface.
 
 [[network-general]]
 === General Network
 
 AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
-This feature has also been added for network interfaces which supports 2.5G speed.
+gitref:472a0ccf847a[repository=src]
+
 These features has also been added to the man:lem[4] and man:em[4] drivers.
+gitref:49f12d5b38f6[repository=src]
 
 [[hardware]]
 == Hardware Support
@@ -351,6 +352,7 @@ Please see link:https://www.freebsd.org/releases/{localRel}R/hardware[the list o
 === Processor Support
 
 Nominal support for POWER10 and POWER11 has been added.
+gitref:f9f006df1535[repository=src]
 
 [[networking]]
 [[hardware-virtualization]]
